restructure and fix style / assets
including limiting footer logo size \n moving style.scss to assets/ also messed up the text animation of the button in the nav, so I dealt with that by commenting out the text animation

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,7 @@
 /*!------------------------------------------------------------------
 [MAIN STYLESHEET]
 
-PROJECT:	Roxo HTML
-VERSION:	1.0.0
+Based on Roxo HTML (1.0.0)
 -------------------------------------------------------------------*/
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Montserrat:300,400,500,600,700&display=swap");
 body {
@@ -13,6 +12,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
+  /* color: #00113E; } */
   color: #00113E; }
 
 p {
@@ -56,24 +56,32 @@ h6 {
       position: relative;
       display: block;
       padding: 2px 0;
-      transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1);
-      transform-origin: left center; }
+      // transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1);
+      // transform-origin: left center;
+    }
       .btn .btn-area span::after {
         content: attr(data-text);
         position: absolute;
         top: 150%;
-        left: 0;
-        transform: skewY(30deg);
-        transform-origin: left center;
-        transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1); }
+        // left: 0;
+        // transform: skewY(30deg);
+        // transform-origin: left center;
+        // transition: transform 0.9s cubic-bezier(0.19, 1, 0.22, 1);
+      }
   .btn:hover .btn-area span {
-    transform: translateY(-150%) skewY(7deg); }
+    // transform: translateY(-150%); 
+    // transform: translateY(-150%) skewY(7deg);
+  }
     .btn:hover .btn-area span::after {
-      transform: skewY(-7deg); }
+      // transform: skewY(-7deg);
+    }
   .btn:visited .btn-area span {
-    transform: translateY(-150%) skewY(7deg); }
+    transform: translateY(-150%);
+    // transform: translateY(-150%) skewY(7deg);
+  }
     .btn:visited .btn-area span::after {
-      transform: skewY(-7deg); }
+      // transform: skewY(-7deg);
+    }
 
 .btn-sm {
   padding: 15px 40px !important; }
@@ -779,6 +787,8 @@ textarea.form-control {
   padding: 100px 0; }
   .site-footer-logo {
     margin-bottom: 50px; }
+    img { 
+      max-width: 300px; } // sets max size of footer logo
     @media (max-width: 575px) {
       .site-footer-logo {
         text-align: center; } }
